Improve the measurement conversions and interface
